@@ -92,6 +92,7 @@ JPEG_SETTING	=	@JPEG_SETTING@
 TIFF_SETTING	=	@TIFF_SETTING@
 GEOTIFF_SETTING	=	@GEOTIFF_SETTING@
 GIF_SETTING	=	@GIF_SETTING@
+FITS_SETTING    =       @FITS_SETTING@
 
 GDAL_LIBS	=	$(GDAL_LIB) $(OGR_LIB) \
 			$(GDAL_LIB) $(CPL_LIB) $(OGDI_LIBS)
