@@ -1,0 +1,25 @@
+GDAL_ROOT	=	../..
+
+include $(GDAL_ROOT)/GDALmake.opt
+
+OBJ	=	fitsdataset.o
+
+FITS_OPTS	=	
+
+
+default:	$(OBJ)
+
+clean:
+	rm -f *.o
+
+%.o:	%.c
+	$(CC) -c $(CFLAGS) $(GDAL_INCLUDE) $(FITS_OPTS) $*.c -o $*.o
+
+%.o:	%.cpp
+	$(CXX) -c $(CXXFLAGS) $(GDAL_INCLUDE) $(FITS_OPTS) $*.cpp -o $*.o
+
+
+install-obj:	$(foreach file,$(OBJ),../o/$(file))
+
+../o/%.o:	%.o
+	cp $*.o ../o
